# Need4Stek

./: CMakeLists.txt  Makefile  cmd  pipes.sh
include/: my.h  my_printf.h  n4s.h
lib/my/: Makefile  get_next_line.c  my_putchar.c  my_putstr.c  my_str_to_word_array.c  my_strcat.c  my_strcpy.c  my_strdup.c  my_strncpy.c  tools_tab.c
scenes/: bootstrap_track.ttt  diamond_bonus.ttt
src/: check_end.c  exec_cmd.c  main.c  trottle.c  wheels_dir.c
